# DataMind

./: .env.datamind.example  .env.example  .gitignore  GETTING_STARTED.md  README.md  benchmark.py  config.py  data.md  main.py  pyproject.toml  requirements.txt  server.py
benchmark/: evaluate.py  run.py
benchmark/metrics/: golden_answer_metrics.py
benchmark/models/: embedding_models.py  llm_judges.py
core/: bootstrap.py  session.py
data/: sample.txt
data/chunks/: sample_chunks.jsonl
data/skills/: 代码审查指南.md  数据库运维SOP.md
data/triplets/: sample_triplets.jsonl
datamind/: __init__.py  __main__.py  cli.py  config.py  server.py
datamind/agent/: __init__.py  base.py  loop_native.py  loop_sdk.py  options.py  prompts.py
datamind/capabilities/: __init__.py
datamind/core/: __init__.py  context.py  errors.py  logging.py  protocols.py  registry.py  tools.py
datamind/scripts/: __init__.py  hello_agent.py  hello_agent_sdk.py  hello_db.py  hello_enterprise.py  hello_graph.py  hello_kb.py  hello_memory.py  hello_sdk.py  hello_sdk_native.py  hello_skills.py  seed_enterprise_demo.py
datamind/tests/: __init__.py  test_agent_loop.py  test_config.py  test_db_safeguard.py  test_db_sqlite.py  test_graph.py  test_indexer.py  test_memory.py  test_protocols.py  test_registry.py  test_retrievers.py  test_skills.py  test_tools.py
demo-uploads/: 01-remote-work-policy-2026.md  02-project-kepler-tech-spec.md  03-customers-2026.csv  04-sales-pipeline-q2.csv  05-q2-personnel-changes.txt  06-q2-incidents-extended.csv
docs/: benchmark.md  data.md  demo.md
modules/agent/: agent.py
modules/database/: database.py
modules/dataprocess/: dataclean.py
modules/graphrag/: graph_rag.py
rag/: agent.py  graph_rag.py  indexer.py  retriever.py  skills.py
schema/: __init__.py  types.py
scripts/: start_ccr.sh
static/: app.html  index.html
tests/: test_multimodal_e2e.py  test_multimodal_loading.py
(+53 files in other folders)
